--- a/_config.yml
+++ b/_config.yml
@@ -27,11 +27,12 @@ compress_html:
   clippings: all
   comments: all
   startings: [html, head, body]
-exclude:
+exclude: 
   - _screenshots
   - .DS_Store
   - Gemfile
   - Gemfile.lock
+  - Rakefile
   - LICENSE.txt
   - README.md
 
