--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,24 @@ install:
   - bundle install
 
 script:
-  - env JEKYLL_ENV=production bundle exec jekyll build
+  - env bundle exec rake site:deploy
+
+env:
+  global:
+    secure: EXAMPLE
 
 after_success:
   - touch ./_site/.nojekyll
 
-deploy:
-  provider: pages
-  skip-cleanup: true
-  keep-history: true
-  on:
-    branch: master
-  github-token: $HE_Key_DEPLOY_TOKEN
-  local-dir: _site
-  committer-from-gh: true
+
+
+
+# deploy:
+#   provider: pages
+#   skip-cleanup: true
+#   keep-history: true
+#   on:
+#     branch: master
+#   github-token: $HE_Key_DEPLOY_TOKEN
+#   local-dir: _site
+#   committer-from-gh: true
