--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ safe: false
 lsi: false
 pygments: true
 
-relative_source: https://github.com/yilun1017/yilun1017.github.io.git
-destination: /yilun1017/
+relative_source: ../yilun1017/
+destination: ../yilun1017/
 
 username: yilun1017
 repo: yilun1017.github.io
