--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -52,7 +52,7 @@ jobs:
         sudo rm -rf ./category/*
         echo "ssssssss"
         ls
-        sudo cp ./_site/category/* ./category 
+        sudo cp -rf ./_site/category/* ./category/
         cd public
         git init
         git config user.name "github-actions-bot"
