--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -51,9 +51,11 @@ jobs:
         ls ./_site
         sudo cp -rf ./_site/category ./
         echo  "jahjahah"
+        
+        git init
         git config user.name "github-actions-bot"
         git config user.email "github-actions-bot@users.noreply.github.com"
         git add .
         git commit -m "Deploy GitHub Pages"
-        git push --force "${remote_repo}" master:${remote_branch}
+        git push --force "${remote_repo}" master
       
