--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -57,5 +57,5 @@ jobs:
         git config user.email "github-actions-bot@users.noreply.github.com"
         git add .
         git commit -m "Deploy GitHub Pages"
-        git push --force "${remote_repo}" orgin
+        git push --force "${remote_repo}" origin
       
