--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -56,5 +56,5 @@ jobs:
         git config user.email "github-actions-bot@users.noreply.github.com"
         git add .
         git commit -m "Deploy GitHub Pages"
-        git push --force "${remote_repo}" master:${remote_branch}
+        git push --force "${remote_repo}" blog:${remote_branch}
       
