--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -25,7 +25,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-gems-
     - name: Set up Ruby
-      uses: ruby/setup-ruby@v1.45.0
+      uses: ruby/setup-ruby@108b3a2c8a79ce6a8b5402c2f7d242009737bdf0
       with:
         ruby-version: 2.6
     - name: Install dependencies
