--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -19,13 +19,15 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
-    - name: Setup Ruby
-    - uses: ruby/setup-ruby@v1.45.0
+      
+    - name: Set up Ruby
+      uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.6
-        bundler-cache: ture
-    
-    
+       ruby-version: 2.6
+       bundler-cache: ture
+    - name: Install dependencies
+      run: bundle install
+        
     - name: Run a multi-line script
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_PAGES }}
