--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ default_img:
 name: "Yilun"
 profile_img:
   - https://i.loli.net/2020/09/23/dhxOC8pagW2sYwy.jpg
-profile: 娄依伦<br>we can play multiple roles, play around!<br>we can play multiple roles, play around!<br>we can play multiple roles, play around!
+profile: 娄依伦<br>we can play multiple roles,<br> play around!<br>we can play multiple roles,<br> play around!<br>we can play multiple roles,<br> play around!
 social: 
   - [qq, qq]
   - [twitter, twitter]
